--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="cmder" />
   <package id="curl" />
   <package id="google-chrome-x64" />
+  <package id="sourcetree" />
   <package id="vagrant" />
   <package id="virtualbox" />
   <package id="visualstudiocode" />
