--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,10 @@
 <?xml version="1.0"?>
 <packages>
+  <package id="brackets" />
   <package id="cmder" />
   <package id="curl" />
   <package id="google-chrome-x64" />
+  <package id="jdk8" />
   <package id="sourcetree" />
   <package id="vagrant" />
   <package id="virtualbox" />
