--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="curl" />
   <package id="google-chrome-x64" />
   <package id="mysql.workbench" />
+  <package id="pgadmin3" />
   <package id="sourcetree" />
   <package id="vagrant" />
   <package id="virtualbox" />
