--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <packages>
+  <package id="atom" />
   <package id="cmder" />
   <package id="curl" />
   <package id="google-chrome-x64" />
