--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <packages>
   <package id="atom" />
+  <package id="brackets" />
   <package id="cmder" />
   <package id="curl" />
   <package id="google-chrome-x64" />
