--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="cmder" />
   <package id="curl" />
   <package id="google-chrome-x64" />
+  <package id="mobaxterm" />
   <package id="pgadmin3" />
   <package id="sourcetree" />
   <package id="vagrant" />
