--- a/windows/packages.config
+++ b/windows/packages.config
@@ -3,6 +3,7 @@
   <package id="atom" />
   <package id="brackets" />
   <package id="curl" />
+  <package id="git" />
   <package id="google-chrome-x64" />
   <package id="mobaxterm" />
   <package id="pgadmin3" />
