--- a/rails/Vagrantfile
+++ b/rails/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure(2) do |config|
-  config.vm.box = "ogarcia/archlinux-201510-x64"
+  config.vm.box = "ubuntu/trusty64"
   config.vm.network "forwarded_port", guest: 3000, host: 3000
   config.vm.network "private_network", ip: "192.168.33.10"
   config.ssh.forward_agent = true
