--- a/rails/Vagrantfile
+++ b/rails/Vagrantfile
@@ -1,6 +1,7 @@
 Vagrant.configure(2) do |config|
   config.vm.box = "terrywang/archlinux"
   config.vm.network "forwarded_port", guest: 3000, host: 3000
+  config.vm.network "forwarded_port", guest: 3306, host: 3306
   config.vm.network "private_network", ip: "192.168.33.10"
   config.ssh.forward_agent = true
   config.vm.synced_folder '.', '/home/vagrant/sync'
