--- a/windows/packages.config
+++ b/windows/packages.config
@@ -6,6 +6,7 @@
   <package id="git" />
   <package id="google-chrome-x64" />
   <package id="mobaxterm" />
+  <package id="mysql.workbench" />
   <package id="pgadmin3" />
   <package id="sourcetree" />
   <package id="vagrant" />
