--- a/windows/packages.config
+++ b/windows/packages.config
@@ -10,4 +10,5 @@
   <package id="vagrant" />
   <package id="virtualbox" />
   <package id="visualstudiocode" />
+  <package id="win32-openssh" />
 </packages>
