--- a/linux_files/conf/.tmux.conf
+++ b/linux_files/conf/.tmux.conf
@@ -1,5 +1,13 @@
 unbind C-b
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind '"' split-window -vc "#{pane_current_path}"
+
 set -g prefix C-t
-setw -g mode-keys vi
 set -g base-index 1
 set -g pane-base-index 1
+set -g mouse on
+
+setw -g mode-keys vi
+setw -g window-status-format "#I:#F"
+setw -g window-status-current-format "#I:#F"
