--- a/linux_files/conf/.gitconfig
+++ b/linux_files/conf/.gitconfig
@@ -25,6 +25,7 @@
   mt = mergetool
   p = pull
   ps = push
+  psc = push origin HEAD
   r = rebase
   ra = rebase --abort
   rc = rebase --continue
