--- a/linux_files/conf/.gitconfig
+++ b/linux_files/conf/.gitconfig
@@ -12,6 +12,7 @@
   b = branch
   bk = branch -f bk
   c = checkout
+  cc = !git checkout . && git clean -df
   cl = clean
   co = commit
   cu = checkout -b current
