[modify] gitのaliasにdevを追加しました

--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -12,6 +12,7 @@
 	bk = branch -f bk
 	cc = !git checkout . && git clean -df
 	cu = checkout -b current
+	dev = checkout -b develop
 	l = log --graph --decorate --oneline
 	pushc = push origin -u HEAD
 	rebasea = rebase --abort
