[modify] gitのeditorをnanoに変更しました

--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -6,7 +6,7 @@
 [core]
 	autocrlf = input
 	excludesfile = ~/.gitignore
-	editor = subl -w
+	editor = nano
 [alias]
 	ame = commit -v --amend
 	bk = branch -f bk
