[modify][vscode] プレビューモードでファイルを開くのをやめました

--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -29,5 +29,6 @@
   "editor.formatOnSave": true,
   "git.autofetch": true,
   "workbench.startupEditor": "newUntitledFile",
-  "editor.fontSize": 13
+  "editor.fontSize": 13,
+  "workbench.editor.enablePreviewFromQuickOpen": false
 }
