--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -10,7 +10,7 @@
 [alias]
 	ame = commit -v --amend
 	bk = branch -f bk
-	create = !git init && git commit --allow-empty -m init
+	create = !git init && git commit --allow-empty -m 'create repo'
 	cu = checkout -b current
 	discard = stash -k -u
 	l = log --graph --decorate --oneline
