--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -9,14 +9,14 @@
   "window.zoomLevel": 0,
   "git.confirmSync": false,
   "files.exclude": {
-    "**/.cache": true,
-    "**/.vagrant": true,
-    "**/dist": true,
-    "**/elm-stuff": true,
-    "**/node_modules": true,
-    "**/target": true,
-    "**/tmp": true
-  },
+      "**/.cache": true,
+      "**/.vagrant": true,
+      "**/dist": true,
+      "**/elm-stuff": true,
+      "**/node_modules": true,
+      "**/target": true,
+      "**/tmp": true
+    },
   "files.insertFinalNewline": true,
   "workbench.commandPalette.preserveInput": true,
   "typescript.check.npmIsInstalled": false,
@@ -28,5 +28,7 @@
   "git.autofetch": true,
   "workbench.startupEditor": "newUntitledFile",
   "editor.fontSize": 13,
-  "workbench.editor.enablePreviewFromQuickOpen": false
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "terminal.integrated.rendererType": "dom"
 }
+
