--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -8,7 +8,7 @@
 	excludesfile = ~/.gitignore
 	editor = nano
 [alias]
-	ame = commit -v --amend
+	amend = commit -v --amend
 	bk = branch -f bk
 	create = !git init && git commit --allow-empty -m 'create repo'
 	cu = checkout -b current
