[modify] vscodeの設定項目をソートしました

--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -1,13 +1,15 @@
 {
-  "editor.tabSize": 2,
-  "editor.renderWhitespace": "all",
-  "explorer.openEditors.visible": 0,
-  "files.eol": "\n",
-  "files.trimTrailingWhitespace": true,
+  "editor.fontSize": 13,
+  "editor.formatOnSave": true,
   "editor.insertSpaces": true,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.renderWhitespace": "all",
+  "editor.snippetSuggestions": "top",
+  "editor.tabSize": 2,
   "editor.wordWrap": "on",
-  "window.zoomLevel": 0,
-  "git.confirmSync": false,
+  "explorer.openEditors.visible": 0,
+  "extensions.ignoreRecommendations": true,
+  "files.eol": "\n",
   "files.exclude": {
     "**/.cache": true,
     "**/.vagrant": true,
@@ -18,17 +20,15 @@
     "**/tmp": true
   },
   "files.insertFinalNewline": true,
-  "workbench.commandPalette.preserveInput": true,
-  "typescript.check.npmIsInstalled": false,
-  "git.enableSmartCommit": true,
-  "extensions.ignoreRecommendations": true,
-  "editor.multiCursorModifier": "ctrlCmd",
-  "editor.snippetSuggestions": "top",
-  "editor.formatOnSave": true,
+  "files.trimTrailingWhitespace": true,
   "git.autofetch": true,
-  "workbench.startupEditor": "newUntitledFile",
-  "editor.fontSize": 13,
-  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
   "terminal.integrated.rendererType": "dom",
-  "window.titleBarStyle": "native"
+  "typescript.check.npmIsInstalled": false,
+  "window.titleBarStyle": "native",
+  "window.zoomLevel": 0,
+  "workbench.commandPalette.preserveInput": true,
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.startupEditor": "newUntitledFile"
 }
