[5] vscodeの設定画面をjsonにしました

--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -30,5 +30,6 @@
   "window.zoomLevel": 0,
   "workbench.commandPalette.preserveInput": true,
   "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.settings.editor": "json",
   "workbench.startupEditor": "newUntitledFile"
 }
