[modify] vscodeのhoverを無効化しました

--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.fontSize": 13,
   "editor.formatOnSave": true,
+  "editor.hover.enabled": false,
   "editor.insertSpaces": true,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.renderWhitespace": "all",
@@ -33,3 +34,4 @@
   "workbench.settings.editor": "json",
   "workbench.startupEditor": "newUntitledFile"
 }
+
