[modify] gitのaliasを追加しました

--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -14,10 +14,12 @@
 	cu = checkout -b current
 	discard = stash -k -u
 	l = log --graph --decorate --oneline
+	no-skip = update-index --no-skip-worktree
 	pushc = push origin -u HEAD
 	rebasea = rebase --abort
 	rebasec = rebase --continue
 	s = status -b -s
+	skip = update-index --skip-worktree
 	sync = reset --hard
 [gui]
 	encoding = utf-8
