[modify][vscode] ファイル削除確認を表示しないように変更しました

--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -32,6 +32,7 @@
   "workbench.editor.enablePreview": false,
   "workbench.settings.editor": "json",
   "workbench.startupEditor": "newUntitledFile",
-  "breadcrumbs.enabled": true
+  "breadcrumbs.enabled": true,
+  "explorer.confirmDelete": false
 }
 
