--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -36,5 +36,9 @@
   "explorer.confirmDelete": false,
   "[python]": {
     "editor.tabSize": 4
-  }
+  },
+  "remote.containers.defaultExtensions": [
+    "esbenp.prettier-vscode",
+    "tranhl.find-then-jump"
+  ]
 }
