--- a/linux_files/dotfiles/.config/Code/User/settings.json
+++ b/linux_files/dotfiles/.config/Code/User/settings.json
@@ -39,6 +39,9 @@
   "[python]": {
     "editor.tabSize": 4
   },
+  "[rust]": {
+    "editor.tabSize": 4
+  },
   "remote.containers.defaultExtensions": [
     "esbenp.prettier-vscode",
     "tranhl.find-then-jump"
