feat: git pushで現在のブランチをpushするように変更

--- a/linux_files/dotfiles/.gitconfig
+++ b/linux_files/dotfiles/.gitconfig
@@ -4,7 +4,7 @@
 [pull]
 	rebase = false
 [push]
-	default = simple
+	default = current
 [core]
 	autocrlf = input
 	excludesfile = ~/.gitignore
@@ -17,7 +17,6 @@
 	discard = stash -k -u
 	l = log --graph --decorate --oneline
 	no-skip = update-index --no-skip-worktree
-	pushc = push origin -u HEAD
 	s = status -b -s
 	skip = update-index --skip-worktree
 	sync = reset --hard
